<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:hint="用户名"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/edittext_username"
        android:layout_margin="20dp"
        android:hint="密码"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/edittext_password"
        android:layout_margin="20dp"
        android:background="@android:color/holo_orange_dark"
        android:text="login"/>


</RelativeLayout>